[package]
name = "sanity-s3-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros" ] }
reqwest = { version = "0.12.4", features = ["stream"] }
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0.82"
tempfile = "3.10.1"
futures-util = "0.3.30"
aws-config = "1.2.1"
aws-sdk-s3 = "1.24.0"
chrono = "0.4.38"
bytes = "1.6.0"