[package]
name = "sanity-s3-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.19", features = ["stream"] }
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.98"
tempfile = "3.20.0"
futures-util = "0.3.31"
aws-config = "1.6.3"
aws-sdk-s3 = "1.90.0"
chrono = "0.4.41"
bytes = "1.10.1"
